# serverless-rwkv

./: CODE_OF_CONDUCT.md  Dockerfile  LICENSE  README.md  build.sh  daemon.json  download_model.sh  pyproject.toml  serverless_handler.py
.github/workflows/: docker-image.yml  production.yml  test.yml
runpod/cpp-cuda/: Dockerfile.cpp_cuda  example_request.py  serverless_handler.py
